--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +48,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="images/hp1.jpg">
+              <img src="img/hp1.jpg">
             </div>
           </div>
              <p class="text-contents"><b>Iphone 11 Pro Max</b><br><br>Rp. 20.000.000</p>
@@ -60,7 +61,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="images/hp2.jpg">
+              <img src="img/hp2.jpg">
             </div>
             </div>
             <p class="text-contents"><b>Iphone X</b><br><br>Rp. 11.800.000</p>
@@ -73,7 +74,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="images/hp3.jpg">
+              <img src="img/hp3.jpg">
             </div>
           </div>
             <p class="text-contents"><b>Iphone 8+</b><br><br>Rp. 8.000.000</p>
@@ -86,7 +87,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="images/hp4.jpg">
+              <img src="img/hp4.jpg">
             </div>
             </div>
             <p class="text-contents"><b>Iphone 8</b><br><br>Rp. 5.700.000</p>
@@ -99,33 +100,20 @@
         </div>
           </div>
           <div class="clear"></div>
-        </div>
+        </div>  
   </div>
-  
   <div class="form">
-      <label>
-        <h2 class="text">PEMESANAN BARANG</h2>
-        <input class="nama" type="text" name="nama" placeholder="Nama pembeli"><br>
-        <input class="email" type="text" name="email" placeholder="Email pembeli"><br>
-        <input class="pesan" type="text" name="Pesan" placeholder="Masukkan pesanan"><br>
-        <input class="kirim" type="submit" name="Kirim pesan" value="Kirim pesan"><br>
-      </label>
-    </div>
+    <label>
+      <h2 class="text">PEMESANAN BARANG</h2>
+      <input class="nama" type="text" name="nama" placeholder="Nama pembeli"><br>
+      <input class="email" type="text" name="email" placeholder="Email pembeli"><br>
+      <input class="pesan" type="text" name="Pesan" placeholder="Masukkan pesanan"><br>
+      <button class="kirim" style="vertical-align:middle"><span>Kirim </span></button>
+    </label>
+  </div>
   
   <!-- Footer -->
   <div class="footer">
-    <div class="upper-footer">
-      <div class="contact-form">
-        <h3 class="section-title">Tinggalkan Pesan</h3>
-        <textarea placeholder="Ketik pesan..."></textarea>
-        <p>
-          <input class="nama-contact contact-input" placeholder="Nama">
-          <input class="contact-input" placeholder="Email">
-        </p>
-        <button class="contact-submit" style="vertical-align:middle"><span>Kirim </span></button>
-      </div>
-    </div>
-  </div>
     <div class="lower-footer">
       <div class="lower-left">
         <span>Copyright © 2020 Titik.com . All Rights Reserved</span>
