membuat responsive list-product

--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/hp1.jpg">
+                <img src="img/hp1.jpg">
+              </div>
             </div>
-          </div>
-             <p class="text-contents"><b>Iphone 11 Pro Max</b><br><br>Rp. 20.000.000</p>
-             <div class="order-wrapper">
-               <div class="container">
-                 <span class="btn order">Pesan Barang</span>
-               </div>
-             </div>
+            <p class="text-contents"><b>Iphone 11 Pro Max</b><br><br>Rp. 20.000.000</p>
+            <div class="order-wrapper">
+              <div class="container">
+                <span class="btn order">Pesan Barang</span>
+              </div>
+            </div>
           </div>
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/hp2.jpg">
-            </div>
+                <img src="img/hp2.jpg">
+              </div>
             </div>
             <p class="text-contents"><b>Iphone X</b><br><br>Rp. 11.800.000</p>
             <div class="order-wrapper">
@@ -74,9 +74,9 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/hp3.jpg">
+                <img src="img/hp3.jpg">
+              </div>
             </div>
-          </div>
             <p class="text-contents"><b>Iphone 8+</b><br><br>Rp. 8.000.000</p>
             <div class="border-wrapper">
               <div class="container">
@@ -87,8 +87,8 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/hp4.jpg">
-            </div>
+                <img src="img/hp4.jpg">
+              </div>
             </div>
             <p class="text-contents"><b>Iphone 8</b><br><br>Rp. 5.700.000</p>
             <div class="order-wrapper">
@@ -98,9 +98,9 @@
             </div>
           </div>
         </div>
-          </div>
-          <div class="clear"></div>
-        </div>  
+      </div>
+      <!-- <div class="clear"></div> -->
+    </div>
   </div>
   <div class="form">
     <label>
@@ -111,7 +111,7 @@
       <button class="kirim" style="vertical-align:middle"><span>Kirim </span></button>
     </label>
   </div>
-  
+
   <!-- Footer -->
   <div class="footer">
     <div class="lower-footer">
@@ -128,4 +128,5 @@
     </div>
   </div>
 </body>
+
 </html>
