memperbaiki img list-product

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-                <img src="img/APPLE iPhone 8 plus.jpg">
+                <img src="img/APPLE_iPhone_8_plus.jpg">
               </div>
             </div>
             <p class="text-contents"><b>APPLE iPhone 8 plus</b><br><br>Rp. 11.999.000</p>
@@ -138,7 +138,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-                <img src="img/APPLE iPhone XS Max.jpg">
+                <img src="img/APPLE_iPhone_XS_Max.jpg">
               </div>
             </div>
             <p class="text-contents"><b>APPLE iPhone XS Max</b><br><br>Rp. 28.599.000</p>
@@ -151,7 +151,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-                <img src="img/HUAWEI Mate XS.jpg">
+                <img src="img/HUAWEI_Mate_XS.jpg">
               </div>
             </div>
             <p class="text-contents"><b>HUAWEI Mate XS</b><br><br>Rp. 46.798.800</p>
@@ -164,7 +164,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-                <img src="img/HUAWEI Nova 7.jpg">
+                <img src="img/HUAWEI_Nova_7.jpg">
               </div>
             </div>
             <p class="text-contents"><b>HUAWEI Nova 7</b><br><br>Rp. 6.899.000</p>
@@ -184,7 +184,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-                <img src="img/Samsumng Galaxy A10s.jpg">
+                <img src="img/Samsumng_Galaxy_A10s.jpg">
               </div>
             </div>
             <p class="text-contents"><b>Samsung Galaxy A10s</b><br><br>Rp. 1.749.000</p>
@@ -197,7 +197,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-                <img src="img/Samsung Galaxy Note 10.jpg">
+                <img src="img/Samsung_Galaxy_Note_10.jpg">
               </div>
             </div>
             <p class="text-contents"><b>Samsung Note 10</b><br><br>Rp. 13.999.900</p>
@@ -210,7 +210,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-                <img src="img/Samsung Galaxy S20.jpg">
+                <img src="img/Samsung_Galaxy_S20.jpg">
               </div>
             </div>
             <p class="text-contents"><b>Samsung Galaxy S20+</b><br><br>Rp. 17.499.000</p>
@@ -223,7 +223,7 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-                <img src="img/Samsung Galaxy Z flip.jpg">
+                <img src="img/Samsung_Galaxy_Z_flip.jpg">
               </div>
             </div>
             <p class="text-contents"><b>Samsung Galaxy Z flip</b><br><br>Rp. 23.888.000</p>
