--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               </div>
             </div>
           </div>
-        </div>s
+        </div>
       </div>
       <div class="clear"></div>
     </div>
