--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
           </div>
         </div>
       </div>
-      <div class="clear"></div>
+      <div class="clear">
+      </div>
     </div>
   </div>
   <div class="form">
