--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/hp1.jpg">
+                <img src="img/hp1.jpg">
+              </div>
             </div>
-          </div>
-             <p class="text-contents"><b>Iphone 11 Pro Max</b><br><br>Rp. 20.000.000</p>
-             <div class="order-wrapper">
-               <div class="container">
-                 <span class="btn order">Pesan Barang</span>
-               </div>
-             </div>
+            <p class="text-contents"><b>Iphone 11 Pro Max</b><br><br>Rp. 20.000.000</p>
+            <div class="order-wrapper">
+              <div class="container">
+                <span class="btn order">Pesan Barang</span>
+              </div>
+            </div>
           </div>
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/hp2.jpg">
-            </div>
+                <img src="img/hp2.jpg">
+              </div>
             </div>
             <p class="text-contents"><b>APPLE Iphone X</b><br><br>Rp. 11.800.000</p>
             <div class="order-wrapper">
@@ -92,9 +92,9 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/hp3.jpg">
+                <img src="img/hp3.jpg">
+              </div>
             </div>
-          </div>
             <p class="text-contents"><b>APPLE Iphone 8+</b><br><br>Rp. 8.000.000</p>
             <div class="border-wrapper">
               <div class="container">
@@ -105,8 +105,8 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/hp4.jpg">
-            </div>
+                <img src="img/hp4.jpg">
+              </div>
             </div>
             <p class="text-contents"><b>APPLE Iphone 8</b><br><br>Rp. 5.700.000</p>
             <div class="order-wrapper">
@@ -116,30 +116,30 @@
             </div>
           </div>
         </div>
-          </div>
-          <div class="clear"></div>
-        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
     <div class="product-wrapper">
       <div class="container">
         <div class="products">
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/APPLE iPhone 8 plus.jpg">
+                <img src="img/APPLE_iPhone_8_plus.jpg">
+              </div>
             </div>
-          </div>
-             <p class="text-contents"><b>APPLE iPhone 8 plus</b><br><br>Rp. 11.999.000</p>
-             <div class="order-wrapper">
-               <div class="container">
-                 <span class="btn order">Pesan Barang</span>
-               </div>
-             </div>
+            <p class="text-contents"><b>APPLE iPhone 8 plus</b><br><br>Rp. 11.999.000</p>
+            <div class="order-wrapper">
+              <div class="container">
+                <span class="btn order">Pesan Barang</span>
+              </div>
+            </div>
           </div>
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/APPLE iPhone XS Max.jpg">
-            </div>
+                <img src="img/APPLE_iPhone_XS_Max.jpg">
+              </div>
             </div>
             <p class="text-contents"><b>APPLE iPhone XS Max</b><br><br>Rp. 28.599.000</p>
             <div class="order-wrapper">
@@ -151,9 +151,9 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/HUAWEI Mate XS.jpg">
+                <img src="img/HUAWEI_Mate_XS.jpg">
+              </div>
             </div>
-          </div>
             <p class="text-contents"><b>HUAWEI Mate XS</b><br><br>Rp. 46.798.800</p>
             <div class="border-wrapper">
               <div class="container">
@@ -164,8 +164,8 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/HUAWEI Nova 7.jpg">
-            </div>
+                <img src="img/HUAWEI_Nova_7.jpg">
+              </div>
             </div>
             <p class="text-contents"><b>HUAWEI Nova 7</b><br><br>Rp. 6.899.000</p>
             <div class="order-wrapper">
@@ -175,30 +175,30 @@
             </div>
           </div>
         </div>
-          </div>
-          <div class="clear"></div>
-        </div>  
+      </div>
+      <div class="clear"></div>
+    </div>
     <div class="product-wrapper">
       <div class="container">
         <div class="products">
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/Samsumng Galaxy A10s.jpg">
+                <img src="img/Samsumng_Galaxy_A10s.jpg">
+              </div>
             </div>
-          </div>
-             <p class="text-contents"><b>Samsung Galaxy A10s</b><br><br>Rp. 1.749.000</p>
-             <div class="order-wrapper">
-               <div class="container">
-                 <span class="btn order">Pesan Barang</span>
-               </div>
-             </div>
+            <p class="text-contents"><b>Samsung Galaxy A10s</b><br><br>Rp. 1.749.000</p>
+            <div class="order-wrapper">
+              <div class="container">
+                <span class="btn order">Pesan Barang</span>
+              </div>
+            </div>
           </div>
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/Samsung Galaxy Note 10.jpg">
-            </div>
+                <img src="img/Samsung_Galaxy_Note_10.jpg">
+              </div>
             </div>
             <p class="text-contents"><b>Samsung Note 10</b><br><br>Rp. 13.999.900</p>
             <div class="order-wrapper">
@@ -210,9 +210,9 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/Samsung Galaxy S20.jpg">
+                <img src="img/Samsung_Galaxy_S20.jpg">
+              </div>
             </div>
-          </div>
             <p class="text-contents"><b>Samsung Galaxy S20+</b><br><br>Rp. 17.499.000</p>
             <div class="border-wrapper">
               <div class="container">
@@ -223,9 +223,9 @@
           <div class="product">
             <div class="product-icon">
               <div class="box-img">
-              <img src="img/Samsung Galaxy Z flip.jpg">
+                <img src="img/Samsung_Galaxy_Z_flip.jpg">
+              </div>
             </div>
-          </div>
             <p class="text-contents"><b>Samsung Galaxy Z flip</b><br><br>Rp. 23.888.000</p>
             <div class="order-wrapper">
               <div class="container">
@@ -234,9 +234,9 @@
             </div>
           </div>
         </div>
-          </div>
-          <div class="clear"></div>
-        </div>  
+      </div>
+      <div class="clear"></div>
+    </div>
   </div>
   <div class="form">
     <label>
@@ -247,7 +247,7 @@
       <button class="kirim" style="vertical-align:middle"><span>Kirim </span></button>
     </label>
   </div>
-  
+
   <!-- Footer -->
   <div class="footer">
     <div class="lower-footer">
@@ -264,4 +264,5 @@
     </div>
   </div>
 </body>
+
 </html>
